# httpmocker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config_example.json  docker-compose.example.yml  pyproject.toml  requirements-dev.txt  requirements.txt  smoke-tests.md
.github/: dependabot.yml
.github/workflows/: ci.yml
configs/: example.json
httpmocker/: __init__.py  __main__.py  config_loader.py  console_formatter.py  request_handler.py
payloads/: example.json  urls_list.json
tests/: test_config_loader.py  test_console_formatter.py  test_main.py  test_request_handler.py
