[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "httpmocker"
dynamic = ["version"]
description = "Simple HTTP REST API mocker for integration and end-to-end testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jan Wychowaniak" },
]
keywords = ["http", "mock", "testing", "rest", "api", "integration-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "bottle>=0.13.4",
    "pydantic>=2.11",
    "rich>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5",
    # Pinned exactly: `ruff format` output is version-sensitive, so local, CI,
    # and the pre-commit hook must all use the same version.
    "ruff==0.15.8",
]

[project.scripts]
httpmocker = "httpmocker.__main__:main"

[project.urls]
Homepage = "https://github.com/janwychowaniak/httpmocker"
Repository = "https://github.com/janwychowaniak/httpmocker"
Issues = "https://github.com/janwychowaniak/httpmocker/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
]
# The formatter owns line length; long string literals it cannot wrap should not
# be flagged as lint errors.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=httpmocker --cov-report=term-missing"

[tool.coverage.run]
source = ["httpmocker"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.hatch.version]
path = "httpmocker/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["httpmocker"]

[tool.hatch.build.targets.sdist]
include = [
    "/httpmocker",
    "/tests",
    "/payloads",
    "/config_example.json",
    "/README.md",
    "/LICENSE",
]
